# StateMachine

./: .gitignore  CMakeLists.txt  README.md
examples/: DemoStates.cpp  DemoStates.h  main.cpp
include/state_machine/: State.h  StateMachine.h
src/: StateMachine.cpp
